<resources>
    <string name="app_name">EDUPV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EDUPV</string>
    <string name="nav_header_subtitle">edupv@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="description">Media Controls</string>


    <string name="texto1Organizacaomaterial"> Os materiais necessários para a execução do
        procedimento são:</string>


    <string name="textoveia">
        A punção venosa pode ser executada em veias do antebraço, mãos, pés, pernas,
        pescoço e couro cabeludo. A escolha do local deve ser feita levando em consideração
        alguns aspectos, tais como: finalidade do procedimento, idade e aspectos físicos
        do paciente, medicamento a ser infundido, calibre do cateter indicado ao procedimento,
        e espessura das veias.A seguir é demonstrado a anatomia das mãos e do antebraço, locais geralmente
        puncionados em adultos!
    </string>

    <string name="texto1scalp"> Este dispositivo é indicado para infusão com duração de até 24 horas. A identificação deste dispositivo é dado por números
        ímpares,quanto menor o calibre, maior é  o seu número de identificação!</string>

    <string name="texto1Jelco">Recomendado para terapias intravenosas com duração média de 72 horas. Neste cateter
o número de identificação é inverso ao calibre da agulha, ou seja, quanto menor
for a sua identificação, maior é o seu calibre. A identificação neste dispositivo
é disposto em números pares! </string>

    <string name="jelcoLaranja">Utilizado em adolescentes e Adultos durante cirurgias para
        infusão de líquidos. A inserção com este cateter exige veia calibrosa.  </string>

    <string name="jelcocinza">Este cateter possui a mesma finalidade do jelco equivalente a numeração 14 (cor Laranja). </string>

    <string name="jelcoverde">Utilizado em crianças,adolescentes e adultos, para administrar sangue,
         hemoderivados e outras infusões viscosas.A inserção deste cateter exige veia calibrosa.</string>

    <string name="jelcorosa">Pode ser utilizado em crianças, adolescentes e adultos. Este cateter é adequado para a maioria das infusões
        venosas de sangue e hemoderivados. </string>

    <string name="jelcoazul"> Pode ser utilizado em bebês, crianças, adolescentes e adultos, sendo adequado para a maioria das infusões.
        É fácil de inserir em veias pequenas e frágeis. A infusão utilizando este dispositivo deve ser lenta.</string>

    <string name="jelcoamarelo"> Pode ser utilizado em recém-nascidos, bebês, crianças, adolescentes e adultos, sendo adequado para a maioria das infusões.
        A velocidade de infusão utilizando este dispositivo deve ser lenta.
        É ideal para veias muito finas, pequenas veias digitais ou veias internas do antebraço em idosos.</string>

    <string name="scalpbege"> É o scalp mais calibroso, recomendado para utilização em adultos. Exige veia calibrosa.</string>
    <string name="scalpverde"> Scalp recomendado para utilização em adultos.</string>
    <string name="scalpazul"> Ideal para utilizar em adultos, idosos e adolescentes.</string>
    <string name="scalplaranja"> Scalp recomendado para utilização em crianças, adultos e idosos. Exige veia não calibrosa.</string>
    <string name="scalpcinza"> Corresponde ao Scalp de menor calibre, recomendado para a maioria dos pacientes, inclusive crianças.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">splashScreen</string>
    <string name="title_activity_video_reproducao">videoReproducao</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_reproduzir_video">Reprodução Video</string>
    <string name="title_activity_play_video">PlayVideo</string>
    <string name="title_activity_video_play">VideoPlay</string>
    <string name="title_activity_tela_teste">TelaTeste</string>
    <string name="title_activity_video_manuseio_jelco_scapl">VideoManuseioJelcoScapl</string>
    <string name="sobrenos">Aplicativo desenvolvido no Instituto Federal do Norte de Minas Gerais campus Januária como
    trabalho de conclusão do curso Tecnologia em Análise e Desevolvimento de Sistemas. </string>
    <string name="desenvolvido">Desenvolvido por: Jeanne Rocha de Almeida</string>
    <string name="contato">Contato: jeannerocha8@gmail.com</string>
    <string name="felipe">Orientado por: Professor Mestre Felipe Mota</string>
    <string name="karine">Co-Orientado por: Professora Mestra Karine Fróes</string>
    <string name="title_activity_video_org_materiais">VideoOrgMateriais</string>
    <string name="title_activity_video_identificacao_cateter">VideoIdentificacaoCateter</string>
</resources>
